Fix missing colors variables

--- a/scss/themes/lighter/_colors.scss
+++ b/scss/themes/lighter/_colors.scss
@@ -6,3 +6,5 @@ $structure-color-bright: #f7f7f7;
 $structure-color-dark: #fafafb;
 $y-axis-line-width: 2px;
 $annotation: #f7f7f7;
+$alert-color-primary: #FF7900;
+$alert-color-secondary: #FF4F00;
